--- a/definitions/vonage-business-cloud/vgis.yml
+++ b/definitions/vonage-business-cloud/vgis.yml
@@ -170,7 +170,7 @@ paths:
                 - OUTBOUND
         - in: query
           name: states
-          description: 'Return calls from this index in the response (Default: ACTIVE)'
+          description: 'Filter calls by state (Default: ACTIVE)'
           schema:
             type: array
             items:
@@ -183,13 +183,13 @@ paths:
                 - REMOTE_HELD
         - in: query
           name: offset
-          description: Return calls from this index in the response
+          description: 'Page number of calls to return'
           schema:
             type: integer
             format: int64
         - in: query
           name: size
-          description: 'Return this amount of records in the response (Default: 20)'
+          description: 'Return this amount of calls in the response (Default: 20)'
           schema:
             type: integer
         - in: query
@@ -270,7 +270,7 @@ paths:
                 - OUTBOUND
         - in: query
           name: states
-          description: 'Return calls from this index in the response (Default: ACTIVE)'
+          description: 'Filter calls by state (Default: ACTIVE)'
           schema:
             type: array
             items:
@@ -655,13 +655,13 @@ paths:
                 - CALL
         - in: query
           name: fromDate
-          description: Return calls that occurred after this point in time
+          description: Return events that occurred after this point in time
           schema:
             type: integer
             #format: date
         - in: query
           name: toDate
-          description: Return calls that occurred before this point in time
+          description: Return events that occurred before this point in time
           schema:
             type: integer
             #format: date
@@ -677,7 +677,7 @@ paths:
                 - OUTBOUND
         - in: query
           name: states
-          description: 'Return calls from this index in the response (Default: ACTIVE)'
+          description: 'Filter events by state'
           schema:
             type: array
             items:
@@ -690,13 +690,13 @@ paths:
                 - REMOTE_HELD
         - in: query
           name: offset
-          description: Return calls from this index in the response
+          description: Page number of events to return
           schema:
             type: integer
             format: int64
         - in: query
           name: size
-          description: 'Return this amount of records in the response (Default: 20)'
+          description: 'Return this amount of events in the response (Default: 20)'
           schema:
             type: integer
         - in: query
@@ -709,7 +709,7 @@ paths:
               - ASC
         - in: query
           name: sort
-          description: 'Sort calls by property'
+          description: 'Sort events by property'
           schema:
             type: string
       responses:
