--- a/definitions/application.v2.yml
+++ b/definitions/application.v2.yml
@@ -4,6 +4,8 @@ info:
   version: 1.0.2
   title: "Application API"
   description: |
+    This is the *beta* version of the Application API.
+
     Nexmo provides an Application API to allow management of your Nexmo Applications.
 
     This API is backwards compatible with version 1. Applications created using Version 1 of the API can also be managed using Version 2.
