--- a/definitions/numbers.yml
+++ b/definitions/numbers.yml
@@ -168,7 +168,7 @@ components:
       type: apiKey
       name: api_secret
       in: query
-      description: 'You can find your API key in the [developer dashboard](https://dashboard.nexmo.com)'
+      description: 'You can find your API secret in the [developer dashboard](https://dashboard.nexmo.com)'
   parameters:                     
     index:
       name: index
